# java-portal

./: .gitignore  CMakeLists.txt  readme.md  vcpkg-install.ps1  vcpkg-install.sh
portal-rt/src/: CMakeLists.txt  Main.cpp
portal-rt/src/Constants/: Versions.hpp
portal-rt/src/Repos/: AdoptiumJVMRepo.cpp  IJVMRepo.hpp
portal-rt/src/components/animations/: IAnimationComponent.hpp  SimpleSpinningAnimationComponent.cpp  SimpleSpinningAnimationComponent.hpp
portal-rt/src/components/tasks/: AniDebugApplicationTask.cpp  AniDebugApplicationTask.hpp  ApplicationTaskFactory.cpp  ApplicationTaskFactory.hpp  IApplicationTask.hpp  JVMVersionListApplicationTask.cpp  JVMVersionListApplicationTask.hpp
portal-rt/src/constants/: Configs.hpp
portal-rt/src/repos/: AdoptiumJVMRepo.cpp  AdoptiumJVMRepo.hpp  IJVMRepo.hpp
portal-rt/src/services/: ProgramOptionsService.cpp  ProgramOptionsService.hpp
portal-rt/src/utils/: StdRangesPatch.hpp  WindowsConsoleInitialize.cpp  WindowsConsoleInitialize.hpp
repos/: AdoptiumJVMRepo.hpp
src/: Main.cpp
src/Constants/: Versions.hpp
src/services/: ProgramOptionsService.cpp  ProgramOptionsService.hpp
src/utils/: WindowsConsoleInitialize.cpp  WindowsConsoleInitialize.hpp
